# json-canvas-syndication

./: .gitignore  Cargo.toml  README.md  Spec.md  com.syndicate-json-canvas.plist.example  justfile
src/: main.rs
syndicate-json-canvas-lib/: Cargo.toml
syndicate-json-canvas-lib/src/: lib.rs  orchestrator.rs  sink.rs  tracker.rs
syndicate-json-canvas-sinks/: Cargo.toml
syndicate-json-canvas-sinks/src/: jj_sink.rs  lib.rs  twitter_sink.rs
