[package]
name = "syndicate-obsidian-canvas"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["syndicate-json-canvas-sinks"]

[dependencies]
notify-debouncer-mini = "0.5.0"
syndicate-json-canvas-lib = { path = "syndicate-json-canvas-lib" }
syndicate-json-canvas-sinks = { path = "syndicate-json-canvas-sinks" }
