[package]
name = "syndicate-json-canvas-sinks"
version = "0.1.0"
edition = "2024"

[dependencies]
syndicate-json-canvas-lib = { path = "../syndicate-json-canvas-lib" }
thiserror = "2.0"
chrono = "0.4"
tracing = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }
